# DAP_Link_Tiny

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.c  stm32l412.ld  toolchain.cmake
Inc/: DAP.h  DAP_config.h  rcc.h  stm32l412_def.h  usbd.h
Src/: DAP.c  SW_DP.c  rcc.c  usbd.c
stm32l412_system/: CMakeLists.txt
stm32l412_system/CMSIS/: core_cm4.h
stm32l412_system/inc/: macros.h  stm32l412.h  stm32l412_system.h
stm32l412_system/src/: ffrestanding_memcpy.c  ffrestanding_memset.c  stm32l412_startup.c  stm32l412_system.c
